[package]
name = "tcpstate"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
std = ["serde"]

[dependencies]
bitflags = "1.2"
log = "0.4"
hashbrown = "0.11"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]
optional = true

[dev-dependencies]
# Tests
env_logger = "0.9"
crossbeam-channel = "0.5.1"
